--- a/frontend/update.html
+++ b/frontend/update.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="home.css">
 	<link rel="stylesheet" type="text/css" href="std.css">
+	<link rel="stylesheet" type="text/css" href="teacherds.css">
 	<script src="./teacherds.js"></script>
 	<title>add student</title>
 </head>
@@ -16,9 +17,8 @@
 </ul>
 <div id="confirmdata"></div>
 <div class="form">
-	LIB. ID<br>
+LIB. ID<br>
 	<input type="text" id="lib_id"><br>
-
 	NAME <br>
 	<input type="text" id="name"><br>
 	FATHER NAME <br>
@@ -35,8 +35,7 @@
 	<input type="date" id="dob"><br>
 	ADDRESS <br>
 	<input type="text" id="address"><br>
-	<button>Reset</button>
-	<button onclick="addstudent()">Submit</button>
+	<button class="button"  onclick="update()">update</button>
 </div>
 </body>
 </html>
